Port to `26.1-snapshot-9`